[package]
name = "typst-render"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Render Typst and Markdown to HTML with MathML math support"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
typst = "0.14.2"
typst-html = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
pulldown-cmark = { version = "0.13", features = ["html"] }
latex2mathml = "0.2"
ureq = "3"
tar = "0.4"
flate2 = "1"
