[package]
name = "fx-renderer"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Shared rendering library: Typst, Markdown, and LaTeX to HTML with MathML math support"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
typst = "0.14.2"
typst-html = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
markdown-it = "0.6"
markdown-it-footnote = "0.2"
markdown-it-front-matter = "0.3"
latex2mathml = "0.2"
serde_json = "1"
ureq = "3"
base64 = "0.22"
blake3 = "1"
tar = "0.4"
flate2 = "1"
